crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__descriptive.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;0",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Descriptive text tiers: %com, %act, %gpx, %sit, %exp",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: com_dependent_tier, act_dependent_tier, gpx_dependent_tier,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "sit_dependent_tier, exp_dependent_tier",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "CHI is pointing at the bird in the tree",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Com"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "pointing with right hand toward window",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Act"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "extends arm, opens hand",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Gpx"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "seated at table with toys",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Sit"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "CHI appears excited",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Exp"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "look",
              "content": [
                {
                  "content": "look",
                  "type": "text"
                }
              ],
              "raw_text": "look",
              "type": "word"
            },
            {
              "cleaned_text": "at",
              "content": [
                {
                  "content": "at",
                  "type": "text"
                }
              ],
              "raw_text": "at",
              "type": "word"
            },
            {
              "cleaned_text": "that",
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "yes",
              "content": [
                {
                  "content": "yes",
                  "type": "text"
                }
              ],
              "raw_text": "yes",
              "type": "word"
            },
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "see",
              "content": [
                {
                  "content": "see",
                  "type": "text"
                }
              ],
              "raw_text": "see",
              "type": "word"
            },
            {
              "cleaned_text": "it",
              "content": [
                {
                  "content": "it",
                  "type": "text"
                }
              ],
              "raw_text": "it",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;0",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
